@@ -130,6 +130,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Remove all commas when parsing float numbers in sorted tables
 * Limit text field of deletion, protection and user rights changes reasons to
   255 characters (already restricted in the database)
+* In the deletion default reasons, calculate how much text to get from the
+  article text, rather than getting 150 characters (which may be too much)
 
 === API changes in 1.12 ===
 
